# news-auto-manager

./: .env.example  LICENSE  README.md  constants.py  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: daily_news.yml
func/: get_global_news.py  send_message_to_url.py  summarize_news.py
github/: copilot-instructions.md
interfaces/: data.py
